--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@ font-family: sans-serif;
  h1 {display: flex;
 justify-content: center;
 
-border:2px solid black;
+
 width:40%;
 position:absolute;
 left:400px;
 top:20px;
 ;
 padding:30px 10px;
-}
+border:5px solid black;}
 /* paragraph */
 P {display: flex;
 justify-content: center;
